# webrtc_class

./: .gitignore  video_stream.mkv
config/: web_server.go
ffmpeg_base/: CMakeLists.txt  FFmpegVideoDecoder.c  FFmpegVideoDecoder.h  FFmpegVideoEncoder.c  FFmpegVideoEncoder.h  ffmpeg_base.c  ffmpeg_base.h  save_image.cpp  save_image.h  srs_librtmp.cpp  types.h
test_so_lib/: CMakeLists.txt  main.cpp
webserver/: main.go
webserver/handler/: handler.go  signal.go
webserver/route/: route.go
webserver/static/: index.html
webserver/static/demo/: direct_chat.html  direct_chat_with_websocket.html  flv_video.html  local_media_demo.html  remote_chat.html  test_mediasource.html  transfer_media_demo.html
